lessons/lesson-4.3/backend-deployment.yaml
# File: backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: open-app
spec:
  selector:
    matchLabels:
      component: backend
  replicas: 2
  template:
    metadata:
      labels:
        component: backend
    spec:
      containers:
      - name: backend
        image: digitalocean/flask-helloworld
        command: ["/bin/sh"]
        args: ["-c", "apk add --no-cache postgresql-client && python -m flask run --host=0.0.0.0"]
        ports:
        - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: open-app
spec:
  ports:
  - port: 5000
    protocol: TCP
  selector:
    component: backend
