lessons/lesson-4.3/database-deployment.yaml
# File: database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: open-app
spec:
  selector:
    matchLabels:
      component: database
  replicas: 1
  template:
    metadata:
      labels:
        component: database
    spec:
      containers:
      - name: postgres
        image: postgres:12
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: open-app
spec:
  ports:
  - port: 5432
    protocol: TCP
  selector:
    component: database
