lessons/lesson-4.3/backend-to-database-ingress-policy.yaml
# File: backend-to-database-ingress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-to-database
  namespace: open-app
spec:
  podSelector:
    matchLabels:
      component: database
  ingress:
  - from:
    - podSelector:
        matchLabels:
          component: backend
    ports:
    - protocol: TCP
      port: 5432
