lessons/lesson-4.3/frontend-ingress-allow-any.yaml
# File: frontend-ingress-allow-any.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-ingress-allow-any
  namespace: open-app
spec:
  podSelector:
    matchLabels:
      component: frontend
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 80
