lessons/lesson-4.3/frontend-to-backend-ingress-policy.yaml
# File: frontend-to-backend-ingress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-to-backend-ingress-policy
  namespace: open-app
spec:
  podSelector:
    matchLabels:
      component: backend
  ingress:
  - from:
    - podSelector:
        matchLabels:
          component: frontend
    ports:
    - protocol: TCP
      port: 5000
